# kroki-srv

./: Cargo.toml  Makefile  README.md  docker-compose.yaml
.run/: check.run.xml  clippy.run.xml
src/: askama_axum.rs  diags.rs  main.rs  routes.rs  server.rs  util.rs
templates/: Home.html
